# eventum

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LOGGING.md  PROPOSALS.md  README.md  SECURITY.md  pyproject.toml  test.py
.claude/: lessons.md  settings.json
.claude/agents/: architect.md  code-reviewer.md  content-growth.md  developer.md  docs-writer.md  generator-builder.md  product-strategist.md  qa-engineer.md  researcher.md
.claude/commands/: commit.md
.claude/hooks/: auto-format.sh  enforce-quality.sh  guard-generated.sh  log-agent.sh  python-format-lint.sh  python-typecheck.sh  stop-check.sh  ts-format-lint.sh  ts-typecheck.sh
.claude/rules/: api.md  cross-cutting.md  plugins.md  templates.md  ui.md
.claude/rules/backend/: api.md  app.md  core.md  exceptions.md  logging.md  mcp.md  plugins.md  server.md
.claude/rules/backend/plugins/: event.md  input.md  output.md
.claude/rules/content/: generators.md  templates.md
.claude/rules/docs/: blog.md  hub.md  mdx.md
.claude/rules/frontend/: ui.md
.claude/skills/competitive-analysis/: SKILL.md
.claude/skills/create-generator/: SKILL.md  api-reference.md
.claude/skills/growth-review/: SKILL.md
.claude/skills/implement-issue/: SKILL.md
.claude/skills/market-radar/: SKILL.md
.claude/skills/new-docs-page/: SKILL.md
.claude/skills/new-plugin/: SKILL.md
.claude/skills/promote/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/assets/: demo.tape
.github/workflows/: ci.yml  integration-tests.yml  release.yml
config/: eventum.yml  startup.yml
eventum/: __init__.py
eventum/api/: exceptions.py  main.py
eventum/api/dependencies/: app.py  authentication.py
eventum/api/tests/: test_api_app_build.py  test_api_types.py  test_auth.py  test_authentication_unit.py  test_file_tree.py  test_generator_configs.py  test_generators.py  test_instance.py  test_secrets.py  test_startup.py  test_startup_utils.py  test_timestamps_aggregation.py
eventum/api/utils/: file_streaming.py  log_streaming.py
eventum/app/: bounded_run.py  main.py  manager.py  startup.py  workspace.py
eventum/app/models/: generators.py  settings.py  startup.py
eventum/app/startup/: __init__.py  exceptions.py  mapping.py  models.py  service.py  storage.py
eventum/app/tests/: test_bounded_run.py  test_main.py  test_manager.py  test_mcp_parameters.py  test_models_generators.py  test_models_parameters.py  test_models_startup.py  test_startup.py  test_startup_mapping.py  test_startup_models.py  test_workspace.py
eventum/cli/: pydantic_converter.py  service_manager.py  splash_screen.py
eventum/cli/commands/: eventum.py  mcp.py  service.py
eventum/cli/tests/: test_commands_eventum.py  test_commands_keyring.py  test_commands_mcp.py  test_commands_service.py  test_pydantic_converter.py  test_service_manager.py
eventum/core/: config_loader.py  executor.py  generator.py  parameters.py  plugins_initializer.py  preview.py  queue.py
eventum/core/stages/: __init__.py  event_stage.py  input_stage.py  output_stage.py
eventum/core/tests/: test_config.py  test_config_loader_units.py  test_event_stage.py  test_executor.py  test_generator.py  test_initializer.py  test_input_stage.py  test_output_stage.py  test_parameters.py  test_pipeline_integration.py  test_preview.py  test_queue.py
eventum/logging/: config.py  file_paths.py  handlers.py
eventum/mcp/: __init__.py  context.py  errors.py  observability.py  redaction.py  server.py
eventum/mcp/examples/: __init__.py
eventum/mcp/prompts/: __init__.py  authoring.py  operations.py
eventum/mcp/resources/: __init__.py  examples.py  schema.py  templating.py  workspace.py
eventum/mcp/tests/: test_cli_mcp.py  test_context.py  test_discovery.py  test_errors.py  test_examples_valid.py  test_formatters.py  test_live_tools.py  test_observability.py  test_preview_tools.py  test_prompts.py  test_redaction.py  test_resources_examples.py  test_resources_schema.py  test_resources_templating.py  test_resources_workspace.py  test_run.py  test_samples.py  test_secrets.py  test_server.py  test_workspace_files.py
eventum/mcp/tools/: discovery.py  formatters.py  live.py  preview.py  run.py  samples.py  secrets.py  workspace_files.py
eventum/plugins/base/: plugin.py
eventum/plugins/event/: exceptions.py
eventum/plugins/input/: adapters.py  mixins.py  normalizers.py  protocols.py  scheduler.py
eventum/plugins/output/: formatters.py  http_client.py  ssl.py
eventum/security/: auth.py  manage.py
eventum/security/tests/: test_auth.py  test_manage.py
eventum/server/: __init__.py  exceptions.py  main.py  shutdown.py
eventum/server/services/: __init__.py
eventum/server/tests/: test_server_lifespan.py  test_server_main.py  test_shutdown.py  test_sse_drain.py  test_ui_routes.py
eventum/ui/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
eventum/ui/src/: index.css
eventum/utils/: dotted_keys.py  lru_cache.py
eventum/utils/tests/: test_dotted_keys.py  test_lru_cache.py
scripts/: release.sh
tests/: README.md  conftest.py  metrics.py
tests/docker/: docker-compose.ci.yml  docker-compose.yml
tests/docker/clickhouse/: init.sql
tests/e2e/: conftest.py  test_cli.py  test_clickhouse.py  test_kafka.py  test_opensearch.py
tests/integration/: assertions.py  conftest.py  event_factory.py  test_clickhouse.py  test_kafka.py  test_opensearch.py  verification.py
tests/integration/backends/: base.py  clickhouse.py  kafka.py  opensearch.py  tcp.py
tests/integration/plugins/: conftest.py  test_clickhouse_integration.py  test_kafka_integration.py  test_opensearch_integration.py  test_tcp_integration.py
tests/longevity/: conftest.py  test_longevity.py
tests/performance/: _helpers.py  conftest.py  test_event_plugins.py  test_input_plugins.py  test_throughput.py
tests/reporting/: html.py  store.py
tests/scale/: conftest.py  test_lifecycle.py  test_mixed_backends.py  test_scale.py
(+276 files in other folders)
